@@ -1,3 +1,7 @@
+2007-10-23 Ian Rutt
+ * glint.F90: added basic capability to extract raw forcing climate for
+   diagnostic purposes
+
 2007-08-31 Ian Rutt
  * Thorough revamp of glint example. Simplified so that all data must be
  on the same grid now, and streamlined code.
